--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,8 @@
----
 kind: pipeline
-type: docker
 name: default
 
+steps:
+- name: test
+  image: python
+  commands:
+  - pip install -r requirements.txt
